# 252RCOSE45700

./: .envrc  .gitignore  README.md  requirements.txt  shell.nix
client/: app.js  index.html  style.css
docs/: IMPLEMENTATION_PLAN.md  PRESENTATION.md  REQUIREMENT.md  TODO.md
docs/presentation/: flake.nix  main.typ
document/: anti-pattern-01-long-function.md  anti-pattern-03-duplicate-business-logic.md  anti-pattern-04-magic-number-and-string.md  anti-pattern-05-sql-in-controller.md
rag/: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
rag/.helix/: ignore
rag/cmd/: ingest.py
rag/data/document/simple/: anti-pattern-02-god-object.md
rag/ingest/: load_files.py
rag/ingest/splitter/: __init__.py  character.py
rag/ingest/vector_store/: faiss.py  faiss_ollama.py
scripts/: ingest.py
server/: main.py
