[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faiss-cpu>=1.12.0",
    "langchain-community>=0.3.31",
    "langchain-ollama>=0.3.10",
    "langchain-text-splitters>=0.3.11",
    "langchain-unstructured[local]>=0.1.5",
    "unstructured[md]>=0.18.18",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

